# 26RC_R2_behavior

./: .gitignore  CMakeLists.txt  README.md  package.xml
action preparation/: README.md  r2_action_interface_catalog.md  r2_behavior_action_sequence.md  r2_sensor_observation_requirements.md
behavior_trees/: r2_competition_main.xml  r2_dry_run_with_mocks.xml  r2_full_flow_verification.xml  r2_no_tip_competition_draft.xml
docs/: current_progress.md  important_files_line_notes.md  integration_judgement.md  r2_no_tip_behavior_tree_design.md
include/r2_behavior/: custom_types.hpp  r2_behavior_client.hpp  r2_behavior_server.hpp
include/r2_behavior/plugins/action/: navigate_to_named_pose.hpp  pub_nav2_goal.hpp  pub_twist.hpp
include/r2_behavior/plugins/condition/: is_manual_start.hpp
launch/: r2_behavior_launch.py
params/: r2_behavior.yaml  r2_behavior_competition_auto_start.yaml  r2_behavior_dry_run.yaml  r2_behavior_full_flow_verification.yaml
plugins/action/: navigate_to_named_pose.cpp  pub_nav2_goal.cpp  pub_twist.cpp
plugins/condition/: is_manual_start.cpp
src/: r2_behavior_client.cpp  r2_behavior_server.cpp
test/: test_independent_runtime_layout.py
